# get.danloo.cc

./: .dir-locals.el  .dockerignore  .gitignore  CLAUDE.md  README.md  README_zh.md  docker-compose-aliyun.yml  docker-compose-infra.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
admin/: README.md  entrypoint.sh  pyproject.toml  settings.py  urls.py
admin/admin_panel/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
admin/admin_panel/static/admin_panel/css/: custom.css
admin/admin_panel/templates/admin_panel/: base.html  dashboard.html  material_management.html  pellet_management.html  tag_management.html  task_management.html  user_management.html
ai-provider/: .env.example  .gitignore
ai-provider/ai-provider/: .env.example  .gitignore  entrypoint.sh  main.py  pyproject.toml  pyrightconfig.json  start.sh
ai-provider/ai-provider/ai_provider/: __init__.py
ai-provider/ai-provider/ai_provider/config/: __init__.py  settings.py
ai-provider/ai-provider/ai_provider/models/: __init__.py  requests.py
ai-provider/ai-provider/ai_provider/prompts/: __init__.py  language_factory.py  prompt_factory.py
ai-provider/ai-provider/ai_provider/services/: __init__.py  exceptions.py  llm_caller.py  llm_clients.py
ai-provider/ai-provider/ai_provider/services/clients/: __init__.py  anthropic_client.py  bedrock_client.py  bedrock_cluster.py  bedrock_monitor.py  openai_client.py
ai-provider/ai-provider/ai_provider/services/utils/: __init__.py  ffmpeg_errors.py  image_processor.py  token_recorder.py  video_processor.py
ai-provider/ai-provider/ai_provider/utils/: __init__.py  decorators.py  helpers.py  json_parser.py  logging_config.py  pool_manager.py  rate_limiter.py
ai-provider/ai-provider/prompts/: all-categories.json  all-language-codes-full-world.json  all-language-codes.json  prompt-pellet-page.md  prompt-pellet-summaries.md  prompt-unified-content-classification.md
ai-provider/evaluation/: .env.example  .gitignore  README.md  __init__.py  eva.py  metrics.py  models.py  pyproject.toml
ai-proxy/: .env.example  README.md  anthropic_client.py  entrypoint.sh  main.py  openai_client.py  pyproject.toml  requirements.txt
ai-proxy/config/: __init__.py  settings.py
ai-proxy/prompts/: material-classification.md
ai-proxy/utils/: __init__.py  rate_limiter.py  token_recorder.py
backend/: .coverage  alembic.ini  conftest.py  database.py  entrypoint.sh  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  python_wrapper.py  scheduler.py
backend/controllers/: file_controller.py  internal_controller.py  job_controller.py  material_controller.py  pellet_controller.py  quota_controller.py  tag_controller.py  user_controller.py
backend/controllers/admin/: __init__.py  blacklist_controller.py  quota_controller.py  scheduler_controller.py
backend/middleware/: auth.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 20250909_000000_complete_unified_schema.py  20250914_150000_add_phone_and_wechat_login.py  20250914_160000_add_token_usage.py  20250915_000000_add_user_quota_system.py  20251009_000000_add_blacklist_table.py  20251013_000000_add_email_verified.py
backend/services/: blacklist_service.py  mail_service.py  material_quota_service.py  material_service.py  pellet_service.py  processing_service.py  quota_service.py  rate_limit_service.py  rate_limit_types.py  secret_service.py  tag_service.py  token_quota_integration_service.py  user_service.py  verification_service.py  wechat_service.py
backend/tasks/: __init__.py  quota_monitor_task.py  quota_reset_task.py
backend/templates/: password_reset_email.html
backend/utils/: circuit_breaker.py
common/: .gitignore  README.md  example_usage.py  pyproject.toml
common/api_models/: ai_provider.py  crypto_keys_model.py  material_model.py  object_model.py  pellet_counters_model.py  pellet_model.py  process_service.py  tag_model.py  user_model.py  user_quota_model.py
common/crypto/: __init__.py
common/crypto/models/: __init__.py  crypto_keys.py
common/crypto/services/: __init__.py  crypto_validation.py  key_generation.py  password_hash.py
common/crypto/types/: __init__.py  crypto_types.py
common/database_models/: __init__.py  base.py  blacklist_model.py  crypto_keys_model.py  job_model.py  material_model.py  object_model.py  pellet_counters_model.py  pellet_model.py  social_account_model.py  tag_model.py  task_model.py  token_usage_model.py  user_model.py  user_quota_model.py  verification_code_model.py
common/exceptions/: __init__.py  quota_exceptions.py
common/logging_config/: __init__.py  setup.py  utils.py
common/middleware/: __init__.py  config.py  exception_handler.py  request_context.py
common/object/services/: buckets.py  object_service.py
common/utils/: __init__.py  request_context.py  request_utils.py  ulid_utils.py
dockerfiles/: admin.Dockerfile  ai-provider.Dockerfile  ai-proxy.Dockerfile  backend.Dockerfile  frontend.Dockerfile  process.Dockerfile
frontend/: .env.example  Dockerfile  I18N_DEPLOYMENT.md  jest.config.js  next-i18next.config.js  next.config.js  package-lock.json  package.json  page-output.html  tailwind.config.js  test-styles.css  tsconfig.tsbuildinfo
nginx/: nginx-minio.conf  nginx.conf
process/: database.py  entrypoint.sh  main.py  pyproject.toml  test_hybrid_processing.py
process/config/: ai_config.py
process/controllers/: api_controller.py
process/middleware/: __init__.py
process/services/: ai_adapter_service.py  database_job_scheduler.py  job_processor.py  job_scheduler.py  material_content_service.py  pellet_generation_service.py
scripts/: docker-deploy.sh  docker-run.sh  env.sh  init-minio.sh  tdd-workflow.sh  test-all.sh  ubuntu-init.sh  verify_docker_deployment.sh
systemdfiles/: README.md  backend-migrate.sh  danloo-admin.service  logrotate.conf  (+12 more)
tests/: README.md  pyproject.toml
tests/http_tests/: __init__.py  run_all_tests.py  test_ai_provider_api.py  test_backend_api.py  test_process_api.py  test_pytest_ai_provider.py  test_pytest_backend.py  test_pytest_process.py
(+58 files in other folders)
