[tool.uv.workspace]
members = [
    "backend",
    "process",
    "ai-provider/ai-provider",
    "ai-proxy",
    "common"
]

[tool.uv.sources]
danloo-common = { workspace = true }


# workspace根目录只管理依赖，不构建包
# 各成员项目会继承这些依赖

[project]
name = "danloo-workspace"
version = "1.0.0"
description = "Danloo workspace for dependency management"
requires-python = ">=3.11"
dependencies = [
    # 共同的基础依赖
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.18.0",
    "bcrypt>=4.0.0",
    "cryptography>=41.0.0",
    "PyJWT>=2.0.0",
    "sqlalchemy>=2.0.0",
    "boto3>=1.34.0",
    "python-dateutil>=2.8.0",
    "pymysql>=1.1.0",
    "aiofiles>=23.0.0",
    "tenacity>=8.0.0",
    "python-multipart>=0.0.5",
    "python-dotenv>=1.0.0",
    "openai==1.106.1",
    "pyyaml>=6.0.2",
    "retrying==1.3.4",
    "requests==2.31.0",
    "schedule>=1.2.0",
    "charset-normalizer>=3.4.2",
    "python-ulid>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.1.0",
    "pytest-env>=1.1.5",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "mysqlclient>=2.2.7",
]

# 虚拟workspace项目，不构建包
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["danloo_workspace"]
