[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "danloo-common"
version = "1.0.0"
description = "Shared common module for object management and crypto utilities"
authors = [
    {name = "Danloo Team", email = "team@danloo.com"}
]
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
    "pydantic>=2.0.0",
    "boto3>=1.34.0",
    "sqlalchemy>=2.0.0",
    "python-dateutil>=2.8.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["crypto*", "object*", "database_models*", "api_models*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]