[project]
name = "danloo-api-tests"
version = "0.1.0"
description = "HTTP API tests for Danloo services"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["http_tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["http_tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--html=reports/test_report.html",
    "--self-contained-html"
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "backend: marks tests for backend service", 
    "process: marks tests for process service",
    "ai_provider: marks tests for AI provider service",
    "slow: marks tests as slow running",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.uv]
dev-dependencies = [
    "pytest-mock>=3.12.0",
    "faker>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"