[project]
name = "ai-provider"
version = "2.0.0"
description = "AI content processing service for Danloo"
authors = [
    {name = "Danloo Team", email = "team@danloo.com"}
]
requires-python = ">=3.11"
keywords = ["fastapi", "llm", "ai", "content-classification", "bedrock", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific :: Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "ffmpeg-python==0.2.0",
    "jieba==0.42.1",
    "numpy==2.3.1",
    "pillow==11.3.0",
    "python-jose==3.3.0",
    "redis==5.0.1",
    "byteplus-python-sdk-v2==3.0.3",
    "volcengine-python-sdk==4.0.5",
    "anthropic>=0.40.0",
    "danloo-common",
]

[project.optional-dependencies]
dev = [
    "iniconfig==2.1.0",
    "pluggy==1.6.0",
]

[project.urls]
Homepage = "https://get.danloo.cc"
Repository = "https://github.com/hashibit/get.danloo.cc"
Documentation = "https://github.com/hashibit/get.danloo.cc#readme"
Issues = "https://github.com/hashibit/get.danloo.cc/issues"

[project.scripts]
llm-proxy = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_provider"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "real_aws: marks tests that require real AWS credentials",
    "real_ark: marks tests that require real VolcEngine Ark credentials",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "tests/pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)8s] %(filename)s:%(lineno)d: %(funcName)s(): %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ['py311']
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["ai_provider"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]