[project]
name = "evaluation"
version = "1.0.0"
description = "精度测试框架"
authors = [
    {name = "AI Operator Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Evaluation特有依赖
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tabulate>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]
full = [
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tabulate>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]